2001-10-02  Nick Clifton  <nickc@cambridge.redhat.com>

        * lib/remote.exp (proc file_on_host): Fix typo in construction
        of file argument.

2001-09-12  Rob Savoye  <rob@peggyo.welcomehome.org>

	* Makefile.am: Add a clean-local target, and nuke example and
	testsuite from SUBDIRS, so they don't get built via "make all".
	* Makefile: All Makefiles regenerated.
	* debian/changelog: Update version for 1.4.2 release.
	* redhat/dejagnu.spec: Update version for 1.4.2 release.

2001-09-07  Will Cohen  <wcohen@redhat.com>

        * lib/target.exp: Ignore ld's warning about alternative functions
        to use.

Thu Aug 30 19:31:44 2001  J"orn Rennecke <amylaar@redhat.com>

        * baseboards/h8300-sim.exp: set_board_info uses_underscores 1
        set_board_info gcc,text_size 60000

2001-07-30  Paul A. Houghton <houghton@wcomnet.com>

	* dejagnu.h, testsuite/libdejagnu/unit.cc: Make the outstate array
	be a const to work with Sun's compiler.
	* runtest.exp: Move the command line variable instantiation to the
	first block of command line option tests, so command line
	variables can be used in tool init scripts.

2001-07-25  Will Cohen  <wcohen@redhat.com>

        * runtest.exp: Removed puts statement.

2001-07-17  Jason Merrill  <jason_merrill@redhat.com>

        * lib/utils.exp (runtest_file_p): An argument can match trailing
        directories as well as the basename.

2001-06-08 John Cotton <john.cotton@nrc.ca>
  
        * testglue.c: 
        * lib/remote.exp: 
        * lib/standard.exp: 
        * lib/target.exp: 
        * lib/utils.exp:    
        * baseboards/mbx821_001.exp:
        * baseboards/mbx860_002.exp:
        * baseboards/mbx8xx.exp:
        * baseboards/mvme167.exp:  
         Added support for automated testing of RTEMS targets,
         specifically the mbx821, mbx860 and mvme167.
  
2001-06-08 John Cotton <john.cotton@nrc.ca> 
  
         */lib/libgloss.exp: fixed regexp bug.

2001-05-30  Jeffrey Oldham  <oldham@codesourcery.com>